--- a/index.html
+++ b/index.html
@@ -62,68 +62,18 @@
         <div class="container">
             <h2 class="section-title">Experience</h2>
             <div class="timeline">
-                <!-- Danika AI -->
+                <!-- Kfir Unit, IDF -->
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <div class="timeline-header">
-                            <h3>Software Developer</h3>
-                            <span class="company">Danika AI</span>
+                            <h3> Combat Soldier</h3>
+                            <span class="company">Kfir Unit, IDF</span>
                         </div>
-                        <p class="timeline-date">2025 - Present</p>
+                        <p class="timeline-date">2019 - 2021</p>
                         <ul class="timeline-description">
-                            <li>Developed & refactored Node.js backend features, integrating AI and FFmpeg APIs.</li>
-                            <li>Built an AI-powered engine to auto-edit videos including content refinement, automatic cuts, noise reduction and transcribing.</li>
-                            <li>Managed all video processing pipelines in a Cloud-Native environment.</li>
-                            <li>Practiced Git workflows and managed code separation for dev/production environments.</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- SpotNET -->
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-header">
-                            <h3>NOC Engineer</h3>
-                            <span class="company">SpotNET</span>
-                        </div>
-                        <p class="timeline-date">2023 - 2025</p>
-                        <ul class="timeline-description">
-                            <li>Monitored and troubleshot a live 24/7 production network, ensuring quick issue resolution and customer service.</li>
-                            <li>Gained hands-on experience with commercial routers, firewalls, and network protocols in a live environment.</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Israel Airports Authority -->
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-header">
-                            <h3>Security Team Leader</h3>
-                            <span class="company">Israel Airports Authority</span>
-                        </div>
-                        <p class="timeline-date">2021 - 2023</p>
-                        <ul class="timeline-description">
-                            <li>Operated in a high-pressure, dynamic environment, enforcing discipline and organizational readiness.</li>
-                            <li>Managed security teams and made time-critical decisions to ensure operational success.</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- YAMAS Unit, IDF -->
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-header">
-                            <h3>Commander & Combat Soldier</h3>
-                            <span class="company">YAMAS Unit, IDF</span>
-                        </div>
-                        <p class="timeline-date">2018 - 2021</p>
-                        <ul class="timeline-description">
-                            <li>Served in the elite YAMAS undercover unit, demanding extreme discipline and rapid problem-solving.</li>
-                            <li>Functioned as a Commander, leading teams and executing complex mission planning and decision making in the field.</li>
+                            <li>Served in Kfir unit, demanding discipline and rapid problem-solving.</li>
+                            <li>Developed teamwork, leadership, and resilience under pressure.</li>
                         </ul>
                     </div>
                 </div>
@@ -165,51 +115,44 @@
 
                 <!-- Project 2: Full-Stack Price Comparison Platform -->
                 <div class="project-card">
-                    <div class="project-media">
-                        <iframe src="https://www.youtube.com/embed/oRbfJn2XV6c" title="Price Comparison Platform Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-                    <div class="project-content">
-                        <h3>Full-Stack Price Comparison Platform</h3>
-                        <p>A comprehensive price comparison web application that aggregates product prices from multiple retailers, helping users find the best deals. Features real-time price tracking and user reviews.</p>
-                        <div class="project-tech">
-                            <span>Python</span>
-                            <span>FASTAPI</span>
-                            <span>Pydantic</span>
-                            <span>MySQL</span>
-                            <span>ORM</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/omrinahum/BestPRICE" target="_blank" rel="noopener" class="project-link">
-                                <i class="fab fa-github"></i> GitHub
-                            </a>
-                            <a href="#" target="_blank" rel="noopener" class="project-link project-link-live">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
-                            </a>
-                        </div>
-                    </div>
+                <div class="project-media">
+                    <iframe src="https://www.youtube.com/embed/oRbfJn2XV6c" 
+                            title="BugHunt Multiplayer Debugging Platform Demo" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                    </iframe>
                 </div>
 
-                <!-- Project 3: WhatsApp Chat Analyzer -->
-                <div class="project-card">
-                    <div class="project-media">
-                        <iframe src="https://www.youtube.com/embed/WjND8lT2KBE" title="WhatsApp Chat Analyzer Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="project-content">
+                    <h3>BugHunt – Real-Time Multiplayer Debugging Platform</h3>
+
+                    <p>
+                        A competitive full-stack platform where players join rooms, receive broken code, 
+                        and race to fix it in real time. Features live collaboration, automated code 
+                        validation, scoring logic, and persistent user profiles.
+                    </p>
+
+                    <div class="project-tech">
+                        <span>Python</span>
+                        <span>FastAPI</span>
+                        <span>PostgreSQL</span>
+                        <span>Pydantic</span>
+                        <span>WebSocket</span>
+                        <span>React</span>
+                        <span>TypeScript</span>
+                        <span>Vite</span>
+                        <span>Docker</span>
                     </div>
-                    <div class="project-content">
-                        <h3>WhatsApp Chat Analyzer</h3>
-                        <p>An intelligent chat analysis tool that processes WhatsApp conversations to extract insights, statistics, and visualizations. Features sentiment analysis, word clouds, and activity patterns.</p>
-                        <div class="project-tech">
-                            <span>Python</span>
-                            <span>Data Analysis</span>
-                            <span>Pandas</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="https://github.com/omrinahum/WhatsappAnalayzer" target="_blank" rel="noopener" class="project-link">
-                                <i class="fab fa-github"></i> GitHub
-                            </a>
-                            <a href="#" target="_blank" rel="noopener" class="project-link project-link-live">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
-                            </a>
-                        </div>
+
+                    <div class="project-links">
+                        <a href="https://github.com/Odeddidi/BugHunt" target="_blank" rel="noopener" class="project-link">
+                            <i class="fab fa-github"></i> GitHub
+                        </a>
+
+                        <a href="https://bughunt-gcq7.onrender.com" target="_blank" rel="noopener" class="project-link project-link-live">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
                     </div>
                 </div>
             </div>
@@ -267,6 +210,8 @@
                         <span class="skill-tag">Git</span>
                         <span class="skill-tag">Jira</span>
                         <span class="skill-tag">Pydantic</span>
+                        <span class="skill-tag">PostgreSQL</span>
+                        <span class="skill-tag">WebSocket</span>
                     </div>
                 </div>
                 <div class="skill-category">
