--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
                 </div>
             </div>
 
+            </div>
+
             <!-- Academic Projects Subsection -->
             <div class="academic-projects">
                 <p class="academic-intro">For those who are more inclined to explore my projects:</p>
