--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <i class="fas fa-brain"></i>
                         <span>Machine Learning</span>
                     </a>
-                    <a href="https://github.com/omrinahum/OOP-Java-GameProject" target="_blank" rel="noopener" class="academic-link">
+                    <a href="https://github.com/Odeddidi/OOP" target="_blank" rel="noopener" class="academic-link">
                         <i class="fas fa-gamepad"></i>
                         <span>OOP</span>
                     </a>
