--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 <!-- Project 1: Netflix-Style Streaming Platform -->
                 <div class="project-card">
                     <div class="project-media">
-                        <iframe src="https://www.youtube.com/embed/S7gWxPRImZQ" title="Netflix-Style Streaming Platform Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe src="https://youtu.be/y0TvU3A2WEw" title="Netflix-Style Streaming Platform Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     <div class="project-content">
                         <h3>Netflix-Style Streaming Platform</h3>
-                        <p>A full-featured streaming platform built with modern web technologies, featuring user authentication, video playback, content categorization, and a sleek Netflix-inspired UI.</p>
+                        <p>A full-featured streaming platform built with modern web technologies, featuring user authentication, video playback, content categorization, recommendation systems, and a sleek Netflix-inspired UI.</p>
                         <div class="project-tech">
                             <span>Node.js</span>
                             <span>React</span>
@@ -139,11 +139,11 @@
             <div class="academic-projects">
                 <p class="academic-intro">For those who are more inclined to explore my projects:</p>
                 <div class="academic-links">
-                    <a href="https://github.com/omrinahum/OS" target="_blank" rel="noopener" class="academic-link">
+                    <a href="https://github.com/Odeddidi/os" target="_blank" rel="noopener" class="academic-link">
                         <i class="fas fa-laptop-code"></i>
                         <span>Operating Systems</span>
                     </a>
-                    <a href="https://github.com/omrinahum/ML" target="_blank" rel="noopener" class="academic-link">
+                    <a href="https://github.com/Odeddidi/Machine-Learning" target="_blank" rel="noopener" class="academic-link">
                         <i class="fas fa-brain"></i>
                         <span>Machine Learning</span>
                     </a>
