--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <!-- Project 1: Netflix-Style Streaming Platform -->
                 <div class="project-card">
                     <div class="project-media">
-                        <iframe src="https://youtu.be/y0TvU3A2WEw" title="Netflix-Style Streaming Platform Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe   src="https://www.youtube.com/embed/y0TvU3A2WEw" title="Netflix-Style Streaming Platform Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     <div class="project-content">
                         <h3>Netflix-Style Streaming Platform</h3>
