--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                     </div>
                 </div>
 
-                <!-- Project 2: Full-Stack Price Comparison Platform -->
+                <!-- Project 2: Full-Stack BugHunt Multiplayer Debugging Platform -->
                 <div class="project-card">
                 <div class="project-media">
-                    <iframe src="https://www.youtube.com/embed/oRbfJn2XV6c" 
+                    <iframe src="https://www.youtube.com/embed/hdQnGHrVYdc" 
                             title="BugHunt Multiplayer Debugging Platform Demo" 
                             frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
